<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">KKNEWS</string>
	<string name="hello_world">Hello world!</string>
	<string name="action_settings">Settings</string>

	<string name="hot">嚴選專欄</string>
	<string name="personal">個人精選</string>
	<string name="setting">設定</string>

	<string name="setting_auto_refresh">自動更新</string>
	<string name="setting_auto_refresh_description">開啓自動更新資訊</string>
	<string name="setting_auto_refresh_frequency">自動更新頻率</string>

	<string name="action_add_file">新增資料夾</string>
	<string name="action_delete_file">刪除資料夾</string>
	<string name="action_add_my_favorite">加到我的最愛</string>
	<string name="action_delete_my_favorite">刪除我的最愛</string>

	<string name="add_to_favorite">加入個人精選</string>
	<string name="new_file_in_favorite">新增資料夾</string>
	<string name="edit_favorite_file_name">編輯資料夾</string>
	<string name="edit_favorite_file_name_title">編輯資料夾名稱</string>
	<string name="edit_favorite_file_image_name_title">修改資料夾圖像</string>

	<string name="new_file_hint">請輸入新增資料夾名稱</string>
	<string name="choose_file_title">請選擇要加入的資料夾</string>
	<string name="choose_file_img">請選擇資料夾封面圖片</string>
	<string name="please_select_img">請選擇任一張圖片</string>

	<string name="cancel">取消</string>
	<string name="add">加入</string>
	<string name="edit">修改</string>
	<string name="delete">刪除</string>
	<string name="new_file">新增</string>

	<string name="add_success">加入成功</string>

	<string name="exit">離開</string>

	<string name="exit_description">確定是否離開?</string>

	<string-array name="panel_titles">
		<item>嚴選專欄</item>
		<item>個人精選</item>
		<item>設定</item>
	</string-array>

	<string-array name="setting_times">
		<item>30秒</item>
		<item>1分鐘</item>
		<item>5分鐘</item>
		<item>10分鐘</item>
	</string-array>

	<string name="select_all">全選</string>
	<string name="select_cancel_all">取消全選</string>

	<string name="select">選取</string>

</resources>
