<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MyActivity" >
    <item android:id="@+id/action_add_my_favorite"
        android:title="@string/action_add_my_favorite"
        android:orderInCategory="100"
        android:showAsAction="never" />
	<item android:id="@+id/action_add_file"
		  android:title="@string/action_add_file"
		  android:orderInCategory="100"
		  android:showAsAction="never" />
	<item android:id="@+id/action_delete_file"
		  android:title="@string/action_delete_file"
		  android:orderInCategory="100"
		  android:showAsAction="never" />
	<item android:id="@+id/action_delete_item"
		  android:orderInCategory="100"
		  android:showAsAction="never"
		  android:title="@string/action_delete_my_favorite"/>
</menu>
