<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:background="#f0f0f0">


	<TextView
			android:id="@+id/text_input_title"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="@string/edit_favorite_file_name_title"
			android:textSize="20sp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			/>

	<EditText
			android:id="@+id/text_input_file_name"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:textSize="20sp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_below="@+id/text_input_title"
			/>
	<TextView
			android:id="@+id/text_change_img_title"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="@string/edit_favorite_file_image_name_title"
			android:textSize="20sp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_below="@+id/text_input_file_name"
			/>

	<GridView
			android:id="@+id/gridview_show_category_img"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="5dp"
			android:columnWidth="100dp"
			android:gravity="center"
			android:numColumns="auto_fit"
			android:verticalSpacing="5dp"
			android:drawSelectorOnTop="true"
			android:stretchMode="columnWidth"
			android:layout_below="@+id/text_change_img_title"
			android:layout_above="@+id/ll_buttom_group">
	</GridView>

	<LinearLayout
			android:id="@+id/ll_buttom_group"
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="5dp"
			android:layout_alignParentBottom="true">

		<Button
				android:id="@+id/button_cancel"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"
				android:layout_marginRight="5dp"
				android:layout_weight="1"
				android:text="@string/cancel"
				android:textColor="@android:color/white"
				android:background="@android:color/holo_blue_dark"/>

		<Button
				android:id="@+id/button_ok"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"
				android:layout_marginRight="5dp"
				android:layout_weight="1"
				android:text="@string/edit"
				android:textColor="@android:color/white"
				android:background="@android:color/holo_blue_dark"/>
	</LinearLayout>


</RelativeLayout>