<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="#ffffff">

	<TextView
			android:id="@+id/text_hot_title"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="@string/hot"
			android:textSize="40sp"
			android:layout_marginLeft="5dp"/>

	<ListView
			android:id="@+id/listview_hot_content"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_above="@+id/ll_multi_select_button_group"
			android:layout_below="@+id/text_hot_title"
			android:visibility="visible"/>


	<LinearLayout
			android:id="@+id/ll_multi_select_button_group"
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:layout_alignParentBottom="true"
			android:visibility="gone">

		<Button
				android:id="@+id/button_multi_select_cancel"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"
				android:layout_marginRight="5dp"
				android:layout_weight="1"
				android:text="@string/cancel"
				android:textColor="@android:color/white"
				android:background="@android:color/holo_blue_dark"/>

		<Button
				android:id="@+id/button_multi_select_ok"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"
				android:layout_marginRight="5dp"
				android:layout_weight="1"
				android:text="@string/add"
				android:textColor="@android:color/white"
				android:background="@android:color/holo_blue_dark"/>
	</LinearLayout>

</RelativeLayout>